added photo upl

--- a/app/assets/stylesheets/components/_upload_image_button.scss
+++ b/app/assets/stylesheets/components/_upload_image_button.scss
@@ -7,3 +7,14 @@
   border-radius: 2px;
   color: white;
 }
+
+#photo-input {
+  display: none;
+  box-shadow: none;
+  margin-top: 50px;
+}
+
+#photo-preview {
+  align-self: center;
+  border-radius: 5px;
+}
