gb design on home etc.

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,7 @@
 .banner {
   color: white;
   text-align: center;
-  height: calc(100vh - 70px);
+  height: calc(100vh);
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
   display: flex;
@@ -30,7 +30,11 @@
 }
 .banner-content p {
   color: orange;
+}
 
+.banner-content {
+  color: rgb(255, 255, 255);
+  text-shadow: 1px 1px 10px black;
 }
 
 // BANNER SMALL
