--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -78,7 +78,7 @@ box-shadow: 2px 2px 15px black;
 }
 
 .form_title, .col-form-label {
-  font-family: "Nunito", "Helvetica", "sans-serif";
+  font-family: 'Blinker', sans-serif;
   font-size: 24px;
   padding: 0.1rem 0.5rem;
   color: #000000;
