--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -15,6 +15,6 @@
 p {
   line-height: 30px;
   font-size: 20px;
-  font-family: Circular, sans-serif;
+  font-family: 'Blinker', sans-serif;
   font-size: 15px;
 }
