--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: url(https://images.unsplash.com/photo-1527786356703-4b100091cd2c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80);">
+<div class="banner" style="background-image: url(https://res.cloudinary.com/geuxor/image/upload/v1615488115/Highlining-adrenalinejunkies_h5mdds.jpg);">
   <div class="banner-content">
   <!-- <a class="btn btn-secondary my-5" href="/cocktails/new">Add a new cocktail</a> -->
     <h1>Experience the world with WildFlower</h1>
@@ -14,8 +14,8 @@
     <label for="end-date">End-Date</label>
     <input id="end-date" type="text" name="end-date" placeholder="<%= (Date.today + 3).strftime('%F') %>">
     <button class="btn search" type="submit">
-                <i class="fa fa-search"></i>
-            </button>
+    <i class="fa fa-search"></i>
+</button>
 
   </form>
 
