--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -8,7 +8,7 @@
   color: #222222
   background-style: #222222;
   font-weight: 800;
-  font-family: Circular, sans-serif;
+  font-family: 'Blinker', sans-serif;
 }
 
 .container-content h5 {
@@ -17,7 +17,7 @@
   color: #222222;
   background-style: #222222;
   font-weight: 500;
-  font-family: Circular, sans-serif;
+  font-family: 'Blinker', sans-serif;
   opacity: .5;
 }
 
