Show page continued

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <!-- <a class="btn btn-secondary my-5" href="/cocktails/new">Add a new cocktail</a> -->
     <h1>Experience the world with WildFlower</h1>
     <h2>Get ready for the adventure of your life!</h2>
-  
+
   </div>
 
   <form class="search-input" action="/experiences">
@@ -15,8 +15,7 @@
     <input id="end-date" type="text" name="end-date" placeholder="<%= (Date.today + 3).strftime('%F') %>">
     <button class="btn search" type="submit">
                 <i class="fa fa-search"></i>
-            </button>
-
+    </button>
   </form>
 
 </div>
@@ -61,4 +60,19 @@
 
       </div>
   </div>
+  <div class="row">
+    <div class="col-4">
+      <img class="image" src="https://images.unsplash.com/photo-1512100356356-de1b84283e18?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Njl8fHRyYXZlbHxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60">
+    </div>
+
+    <div class="col-4">
+      <img class="image" src="https://images.unsplash.com/photo-1502301197179-65228ab57f78?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1532&q=80">
+    </div>
+
+    <div class="col-4">
+      <img class="image" src="https://images.unsplash.com/photo-1553342385-111fd6bc6ab3?ixid=MXwxMjA3fDB8MHxzZWFyY2h8OTJ8fHRyYXZlbHxlbnwwfDF8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+    </div>
+  </div>
+
+
 </div>
