--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -33,3 +33,15 @@
   font-family: Circular, sans-serif;
   font-size: 20px;
 }
+
+.col-8 p {
+  line-height: 30px;
+  font-family: Circular, sans-serif;
+  font-size: 15px;
+}
+
+.image {
+  height: 100px;
+  width: 100px;
+}
+
