--- a/app/views/experiences/_booking_form.html.erb
+++ b/app/views/experiences/_booking_form.html.erb
@@ -4,7 +4,7 @@
 
       <form class="price-input">
         <%= simple_form_for [@experience, @booking] do |f| %>
-          <%= f.input :nr_of_people, label: "No of Guests (max. #{@experience.max_guests})", input_html: { min: 1, max: @experience.max_guests } %>
+          <%= f.input :nr_of_people, label: "No of guests (max. #{@experience.max_guests})", input_html: { min: 1, max: @experience.max_guests } %>
           <%= f.input :start_date, as: :string, input_html: {class: "datepicker"} %>
           <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
           <p>Total price</p>
