--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,12 @@
 @import "components/index";
 @import "pages/index";
 
+// @font-face {
+//     font-family: "Wildflower";
+//     //src: url(../../../fonts/wildflower.ttf) format('truetype');
+//     src: asset-path(/assets/fonts/wildflower) format('truetype');
 
+// }
 
 body {
   font-family: 'Blinker', sans-serif;
