Show page completed

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -12,20 +12,18 @@
   font-size:small;
 }
 
-h3 {
+h3 p {
   font-size: 25px;
   color: rgb(113, 113, 113);
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
-  font-weight: 400;
-  font-size: 30px;
-  font-height: 20px;
+  font-family: Circular, sans-serif;
 }
 
 p {
-  font-size: 25px;
+  font-size: 18px;
   color: rgb(113, 113, 113);
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
-  font-weight: 450;
-  font-size: 14px;
-  font-height: 20px;
+  font-family: 'Blinker', sans-serif;
+  // font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+  // font-weight: 450;
+  // font-size: 14px;
+  // font-height: 20px;
 }
