--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -90,6 +90,14 @@
   position: relative;
 }
 
+.cards-show {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+  // padding: 16px;
+  margin-bottom: 30px;
+  flex-grow: 1;
+}
 
 
 
