--- a/app/assets/stylesheets/components/_li.scss
+++ b/app/assets/stylesheets/components/_li.scss
@@ -1,3 +1,9 @@
 ul {
   list-style-type: none;
 }
+
+li {
+  font-size: 18px;
+  color: rgb(113, 113, 113);
+  font-family: 'Blinker', sans-serif;
+}
