--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -34,23 +34,8 @@
   padding: 25px;
   border-radius: 15px;
 }
-.col-8 h3 {
-  font-family: 'Blinker', sans-serif;
-  font-size: 20px;
+
+.book-style {
+  color: black;
 }
 
-.col-8 p {
-  line-height: 30px;
-  font-family: Circular, sans-serif;
-  font-size: 15px;
-}
-
-.image {
-  height: 100px;
-  width: 100px;
-}
-
-label {
-
-  margin-bottom: 0;
-}
