--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -3,24 +3,21 @@
 <% else %>
   <div class="banner-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path 'https://res.cloudinary.com/geuxor/image/upload/v1615476947/Broken-glass_dcb4ee.jpg' %>')">
 <% end %>
-
   <h1><%= @experience.title %></h1>
-  <p><%= @experience.description[0,128] %>...</p>
 </div>
 
 <div class="container">
   <div class="row my-3">
-    <div class="col-4 align-items-start d-flex py-3 flex-column">
-      <h3 class="my-3">Insight</h3>
+    <div class="col-8 align-items-start d-flex py-3 flex-column">
+      <h3 class="mb-3">Discover more about <%= @experience.activity %></h3>
         <p><%= @experience.description %></p>
-    </div>
-
-    <div class="col-4 align-items-start d-flex py-3 flex-column">
-      <h3 class="my-3 mx-5">Policies</h3>
+      <h3 class="my-3">Policies</h3>
       <ul>
         <% @experience.policies.split(".").each do |policy| %>
-        <li><i class="fas fa-cat"></i> <%= policy %></li>
-        <li><i class="fas fa-glass-cheers"></i> <%= policy %></li>
+        <li class="d-flex align-items-center mb-3">
+          <i class="mr-3 fas <%= Experience::POLICY_ICON[policy.strip] %>"></i>
+          <p class="mb-0"><%= policy %></p>
+        </li>
 
         <% end %>
       </ul>
@@ -28,26 +25,26 @@
 
     <div class="col-4">
       <form class="price-input">
-        <p class="font-italic font-weight-bold">Price per person: € <%= @experience.price %> per day</p>
-        <p class="font-italic font-weight-bold">Max Number of people: <%= @experience.max_guests %></p>
-        <div class="mt-3 mr-5">
+        <p class="font-weight-bold book-style">Price per person: € <%= @experience.price %> per day</p>
+        <p class="font-weight-bold book-style">Max Number of people: <%= @experience.max_guests %></p>
+        <div class="mt-3">
            <%= render 'booking_form', experience: @experience %>
         </div>
       </form>
     </div>
 
-    <div>
+    <div class="col-12">
       <h3 class="mt-5">Meeting Location</h3>
       <p class="mb-3"><%= @experience.meeting_point %></p>
       <div id="map" src='https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/2.3381,48.8693,10.45,0,0/600x1000?access_token=pk.eyJ1IjoicG9wcHlqZW5uaW5ncyIsImEiOiJja2xjZGdjdXIxZXJ1Mm9sYm0ycGRyNjJvIn0.L3m2Fuc9wxwHdOgZ6lLUkw' style="width: 100%; height: 70vh;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-
       </div>
     </div>
 
+    <div>
     <h3 class="my-4 mt-3">More about <%= @experience.activity %></h3>
-    <div class="cards-map">
+      <div class="cards-map">
 
-      <div class="cards">
+      <div class="cards-show">
         <% @experiences.first(3).each do |experience| %>
           <div class="card-trip">
             <%= cl_image_tag experience.photo.key %>
@@ -62,6 +59,7 @@
         <% end %>
       </div>
 
+      </div>
     </div>
   </div>
 
