--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -38,6 +38,7 @@
   font-size: 24px;
   color: rgba(255, 255, 255, 0.829);
   text-shadow: 2px 3px 16px rgba(77, 77, 77, 0.945);
+  margin-left: 10px;
 }
 
 .navbar i:hover{
