--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner-small" style="background-image: url(https://images.unsplash.com/photo-1523287281576-5b596107a6ae?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);">
+<div class="banner-category" style="background-image: url(https://images.unsplash.com/photo-1523287281576-5b596107a6ae?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);">
   <div class="banner-content">
     <h1>What's your next adventure?</h1>
   </div>
@@ -19,6 +19,12 @@
     <i class="fa fa-search"></i>
     </button>
   </form>
+
+
+
+
+
+
 
   <% if params[:activity].present? %>
     <div class="filter">
