--- a/app/assets/stylesheets/components/_upload_image_button.scss
+++ b/app/assets/stylesheets/components/_upload_image_button.scss
@@ -6,6 +6,8 @@
   background: #007bff;
   border-radius: 2px;
   color: white;
+  border-radius: 50px;
+  padding: 8px 16px 8px 16px;
 }
 
 #photo-input {
