cards aligned in center

--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -47,7 +47,7 @@
   </div>
 <% else %>
   <div class="cards-map">
-    <div class="cards px-3">
+    <div class="cards-index px-3">
       <% @experiences.each do |experience| %>
         <div class="card-trip">
           <%= cl_image_tag experience.photo.key %>
