--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -25,11 +25,12 @@
     <div class="col-4">
 
       <div class="price-input">
-        <p class="font-weight-bold book-style">Price per person: € <%= @experience.price %> per day</p>
-        <p class="font-weight-bold book-style">Max Number of people: <%= @experience.max_guests %></p>
-        <div class="mt-3">
-           <%= render 'booking_form', experience: @experience %>
+
+        <div class="big-bold" id="price" data-amount-cents="<%= @experience.price * 100%>">
+          <p class="font-weight-bold book-style">Price per person: €<%= @experience.price %> per day</p> 
         </div>
+        <p class="font-weight-bold book-style">Max Number of people: <span id="maxguests"><%= @experience.max_guests %></span></p>
+           <%= render 'booking_form', experience: @experience %>
       </div>
 
     </div>
