--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -37,10 +37,9 @@
 }
 .price-input {
   background-color: white;
-  padding: 25px;
+  padding: 0 25px 25px 25px;
   border-radius: 32px;
   border-color: grey;
-  padding: 25px;
   border-radius: 15px;
 }
 
